--- a/web/webform/src/app/app.component.scss
+++ b/web/webform/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .app-drawer-container {
     position: absolute;
-    top: 60px;
-    bottom: 60px;
+    top: 0px;
+    bottom: 0px;
     left: 0;
     right: 0;
 }
@@ -27,4 +27,11 @@
     left: 0;
     right: 0;
 }
+
+.maticon {
+    padding: 0 14px;
+  }
   
+.spacer {
+  flex: 1 1 auto;
+}
