--- a/web/webform/src/app/formpage/formpage.component.html
+++ b/web/webform/src/app/formpage/formpage.component.html
@@ -1,25 +1,9 @@
 <app-pageheader></app-pageheader>
-<ul>
-  <li *ngFor="let form of forms$">
-    <mat-card class="matcard-card">
-        <mat-card-header class="matcard-header">
-          <img mat-card-avatar src = "{{form.iconurl}}" class="matcard-usericon" />
-          <mat-card-title>{{form.author}}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <table class="matcard-table">
-            <tr>
-              <th>Title: </th><th><p>{{form.title}}</p></th>
-            </tr>
-            <tr>
-              <th>Postdate: </th><th><p>{{form.date1}}</p></th>
-            </tr>
-            <tr>
-              <th>Due date: </th><th><p>{{form.date2}}</p></th>
-            </tr>
-          </table>
-        </mat-card-content>
-    </mat-card>
-  </li>
-</ul>
-
+<div class="viewswitch">
+    <button mat-button (click)="toggleView('card')"><mat-icon>view_list</mat-icon></button>
+    <button mat-button (click)="toggleView('list')"><mat-icon>table_chart</mat-icon></button>
+</div>
+<div class="views">
+    <app-formpagelistview *ngIf="showListView"></app-formpagelistview>
+    <app-formpagecardview *ngIf="showCardView"></app-formpagecardview>
+</div>
