--- a/web/webform/src/app/formpage/formpage.component.scss
+++ b/web/webform/src/app/formpage/formpage.component.scss
@@ -1,28 +1,3 @@
-.matcard-card {
-  max-width: 1000px;
-}
-
-.matcard-usericon{
-  width: 20px;
-  height: 20px;
-}
-
-.matcard-header{
-  padding-bottom: 5px;
-}
-
-.matcard-table {
-  th {
-    padding-right: 5px;
-  }
-  p {
-    font-weight:normal;
-  }
-}
-
-ul {
-  list-style: none;
-  li {
-    padding-bottom : 5px;
-  }
+.views {
+    height: 70%;
 }
