--- a/web/webform/src/styles.scss
+++ b/web/webform/src/styles.scss
@@ -2,3 +2,9 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+
+mce-tinymce mce-container mce-panel mce-edit-area mce-container mce-panel mce-stack-layout-item {
+    height: 100%;
+}
+
