updated many things

--- a/web/webform/src/app/submitformpage/submitformpage.component.html
+++ b/web/webform/src/app/submitformpage/submitformpage.component.html
@@ -1,39 +1,84 @@
-<mat-dialog-content >
-    <form class = "matinput-form" #Form="ngForm" (ngSubmit)="onSubmit()">
-        <mat-form-field>
-            <input #username matInput placeholder="Username" value="ptsang" disabled="disabled" class="form-control">
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Title" #title="ngModel" 
-            class="form-control" name="title" [(ngModel)] = "form$.title" required>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Author" #author="ngModel"
-            class="form-control" name="author" [(ngModel)] = "form$.author" required>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker1" placeholder="Create Date" #date1="ngModel"
-            class="form-control" name="date1" [(ngModel)] = "form$.date1" required>
-            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker2" placeholder="Due Date" 
-            class="form-control" name="date2" [(ngModel)] = "form$.date2">
-            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-            <mat-datepicker #picker2></mat-datepicker>
-        </mat-form-field>
-        <app-tinymce [elementId]="'content'" (onEditorContentChange)="onKey($event)" [content]="form$.content"></app-tinymce>
-        <mat-form-field>
-            <input matInput [matDatepicker]="picker3" placeholder="Modified Date" 
-            class="form-control" name="posttime" [(ngModel)] = "form$.posttime" disabled>  
-            <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
-            <mat-datepicker #picker3></mat-datepicker>
-        </mat-form-field>
-    </form>
-</mat-dialog-content>
+<div class="mat-dialog-page" #matdialog>
+    <div #matdialogcontent>
+        <mat-dialog-content>
+            
+            <form class = "matinput-form" #Form="ngForm" (ngSubmit)="onSubmit()">
+                <mat-grid-list cols="2" rowHeight="{{innerHeight}}">
+                    <mat-grid-tile colspan="1" rowspan="1">
+                        <mat-form-field>
+                            <input #username matInput placeholder="Username" value="ptsang" disabled="disabled" class="form-control">
+                        </mat-form-field>
+                    </mat-grid-tile>
+                    <mat-grid-tile colspan="1" rowspan="1">
+                        <mat-form-field>
+                            <input matInput placeholder="Title" #title="ngModel" 
+                            class="form-control" name="title" [(ngModel)] = "form$.title" required>
+                        </mat-form-field>
+                    </mat-grid-tile>
+                    <mat-grid-tile colspan="1" rowspan="1">
+                        <mat-form-field>
+                            <input matInput placeholder="Author" #author="ngModel"
+                            class="form-control" name="author" [(ngModel)] = "form$.author" required>
+                        </mat-form-field>
+                    </mat-grid-tile>
 
-<mat-dialog-actions align="end" class="matdialog-actionbar">
-    <button mat-button type="submit" (click)="submitform(Form)" [mat-dialog-close]="true" cdkFocusInitial [disabled]="title.invalid || author.invalid || date1.invalid">Submit</button>
-    <button mat-button mat-dialog-close>Cancel</button>
-</mat-dialog-actions>
+                    <mat-grid-tile colspan="1" rowspan="1">
+                        <mat-form-field>
+                            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker1" placeholder="Create Date" #date1="ngModel"
+                            class="form-control" name="date1" [(ngModel)] = "form$.date1" required>
+                            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                            <mat-datepicker #picker1></mat-datepicker>
+                        </mat-form-field>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile colspan="1" rowspan="1">
+                        <mat-form-field>
+                            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker2" placeholder="Due Date" 
+                            class="form-control" name="date2" [(ngModel)] = "form$.date2">
+                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                            <mat-datepicker #picker2></mat-datepicker>
+                        </mat-form-field>
+                    </mat-grid-tile>
+
+                    <mat-grid-tile colspan="1" rowspan="1">
+                        <mat-form-field>
+                            <input matInput [matDatepicker]="picker3" placeholder="Modified Date" 
+                            class="form-control" name="posttime" [(ngModel)] = "form$.posttime" disabled>  
+                            <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+                            <mat-datepicker #picker3></mat-datepicker>
+                        </mat-form-field>
+                    </mat-grid-tile>
+                </mat-grid-list>
+
+                <div ng2FileDrop
+                    [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
+                    (fileOver)="fileOverBase($event)"
+                    (onFileDrop)="onFileDrop($event)"
+                    [uploader]="uploader"
+                    class="well my-drop-zone">
+                    Put your upload file here
+                </div>
+
+                <div class="dropped-files">
+                    <mat-chip-list>
+                        <mat-chip *ngFor="let atth of attachments">{{atth.filename}}</mat-chip>
+                    </mat-chip-list>
+                    
+                </div>
+
+                <div #tinymce>
+                    <app-tinymce [elementId]="'content'" (onEditorContentChange)="onContentChange($event)" (onKey)="onKey($event)" [content]="form$.content" [height]="mce_height"></app-tinymce>
+                </div> 
+                
+                
+
+            </form>
+        </mat-dialog-content>
+    </div>
+    <div class="spacer" #spacer></div>
+    
+    <mat-dialog-actions class="matdialog-actionbar">
+        <button mat-button type="submit" (click)="submitform(Form)" [mat-dialog-close]="true" cdkFocusInitial [disabled]="title.invalid || author.invalid || date1.invalid">Submit</button>
+        <button mat-button mat-dialog-close>Cancel</button>
+    </mat-dialog-actions>
+</div>
