--- a/web/webform/src/app/submitformpage/submitformpage.component.scss
+++ b/web/webform/src/app/submitformpage/submitformpage.component.scss
@@ -18,9 +18,41 @@
     //max-width: 1000px;
     width: 100%;
     padding: 10px;
+    height: 100%;
   }
 }
 
 mat-dialog-content {
   max-height: 80%;
+}
+
+.my-drop-zone { 
+  border: dotted 3px lightgray; 
+  margin-left: 10px;
+  //margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 30px;
+}
+.nv-file-over { border: dotted 3px red; } /* Default class applied to drop zones on over */
+.another-file-over-class { border: dotted 3px green; }
+
+.mat-dialog-page {
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  height: 100%;
+}
+
+mat-dialog-content {
+  display: contents;
+}
+
+.spacer {
+  flex-grow: 1;
+}
+
+.dropped-files { 
+  margin-left: 10px;
+  //margin-top: 10px;
+  margin-bottom: 10px;
 }
